Update: Business details nunjucks

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -6,7 +6,7 @@
 {% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
+  {{ subHeader(businessName=businessName.value, sbi=sbi, userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
@@ -69,9 +69,87 @@
       {% endif %}
     {% endset %}
 
+
     <h2 class="govuk-heading-m">
       Business contact details
     </h2>
+
+    {# Set change links #}
+    {% if businessName.changeLink %}
+      {% set businessNameActions = {
+        items: [
+          {
+            href: businessName.changeLink,
+            text: businessName.action,
+            visuallyHiddenText: "Business name"
+          }
+        ]
+      } %}
+    {% else %}
+      {% set businessNameActions = null %}
+    {% endif %}
+
+    {% if businessAddress.changeLink %}
+      {% set businessAddressActions = {
+        items: [
+          {
+            href: businessAddress.changeLink,
+            text: businessAddress.action,
+            visuallyHiddenText: "Business address"
+          }
+        ]
+      } %}
+    {% else %}
+      {% set businessAddressActions = null %}
+    {% endif %}
+
+    {% if businessTelephone.changeLink %}
+      {% set businessTelephoneActions = {
+        items: [
+          {
+            href: businessTelephone.changeLink,
+            text: businessTelephone.action,
+            visuallyHiddenText: "Business telephone numbers"
+          }
+        ]
+      } %}
+    {% else %}
+      {% set businessTelephoneActions = null %}
+    {% endif %}
+
+    {% if businessEmail.changeLink %}
+      {% set businessEmailActions = {
+        items: [
+          {
+            href: businessEmail.changeLink,
+            text: businessEmail.action,
+            visuallyHiddenText: "Business email address"
+          }
+        ]
+      } %}
+    {% else %}
+      {% set businessEmailActions = null %}
+    {% endif %}
+
+    {% if vatNumber.changeLink %}
+      {% if vatNumber.changeLink.items %}
+        {# Already an items array (Change + Remove) #}
+        {% set vatNumberActions = vatNumber.changeLink %}
+      {% else %}
+        {# Single link #}
+        {% set vatNumberActions = {
+          items: [
+            {
+              href: vatNumber.changeLink,
+              text: vatNumber.action,
+              visuallyHiddenText: "VAT registration number"
+            }
+          ]
+        } %}
+      {% endif %}
+    {% else %}
+      {% set vatNumberActions = null %}
+    {% endif %}
 
     {{ govukSummaryList({
       rows: [
@@ -82,15 +160,7 @@
           value: {
             text: businessName.value
           },
-          actions: {
-            items: [
-              {
-                href: businessName.changeLink,
-                text: businessName.action,
-                visuallyHiddenText: "Business name"
-              }
-            ]
-          }
+          actions: businessNameActions
         },
         {
           key: {
@@ -99,15 +169,7 @@
           value: {
             html: formattedAddress
           },
-          actions: {
-            items: [
-              {
-                href: businessAddress.changeLink,
-                text: businessAddress.action,
-                visuallyHiddenText: "Business address"
-              }
-            ]
-          }
+          actions: businessAddressActions
         },
         {
           key: {
@@ -116,15 +178,7 @@
           value: {
             html: displayBusinessTelephone
           },
-          actions: {
-            items: [
-              {
-                href: businessTelephone.changeLink,
-                text: businessTelephone.action,
-                visuallyHiddenText: "Business phone numbers"
-              }
-            ]
-          }
+          actions: businessTelephoneActions
         },
         {
           key: {
@@ -133,15 +187,7 @@
           value: {
             text: businessEmail.value
           },
-          actions: {
-            items: [
-              {
-                href: businessEmail.changeLink,
-                text: businessEmail.action,
-                visuallyHiddenText: "Business email address"
-              }
-            ]
-          }
+          actions: businessEmailActions
         }
       ]
     }) }}
@@ -163,15 +209,7 @@
         {
           key: { text: "VAT registration number" },
           value: { html: displayVatNumber },
-          actions: {
-            items: [
-              {
-                href: vatNumber.changeLink,
-                text: vatNumber.action,
-                visuallyHiddenText: "VAT registration number"
-              }
-            ]
-          }
+          actions: vatNumberActions
         }
       ]%}
 
@@ -205,6 +243,22 @@
       Additional details
     </h2>
 
+    {% set businessLegalStatus %}
+      {% if businessLegalStatus.value === 'Not added' %}
+        <span class="govuk-hint display-inline">{{ businessLegalStatus.value }}</span>
+      {% else %}
+        <span>{{ businessLegalStatus.value }}</span>
+      {% endif %}
+    {% endset %}
+
+    {% set businessType %}
+      {% if businessType.value === 'Not added' %}
+        <span class="govuk-hint display-inline">{{ businessType.value }}</span>
+      {% else %}
+        <span>{{ businessType.value }}</span>
+      {% endif %}
+    {% endset %}
+
     {{ govukSummaryList({
       rows: [
         {
@@ -212,7 +266,7 @@
             text: "Business legal status"
           },
           value: {
-            text: businessLegalStatus.value
+            html: businessLegalStatus
           },
           actions: {
             items: [
@@ -229,7 +283,7 @@
             text: "Business type"
           },
           value: {
-            text: businessType.value
+            html: businessType
           },
           actions: {
             items: [
