--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -6,7 +6,7 @@
 {% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 
 {% block beforeContent %}
-  {{ subHeader(businessName=businessName.value, sbi=sbi, userName=userName) }}
+  {{ subHeader(businessName=businessNameHeader, sbi=sbi, userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
