update view business/view personal details links

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -17,11 +17,11 @@
 
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
-        <a href={{businessDetails.link}}>{{businessDetails.text}}</a>
+        <a href={{businessDetails.link}} class="govuk-link govuk-link--no-visited-state">{{businessDetails.text}}</a>
       </p>
       <h3 class="govuk-heading-m"> Personal details</h3>
       <p>
-        <a href="/personal-details">View and update your personal details</a>
+        <a href="/personal-details" class="govuk-link govuk-link--no-visited-state">View and update your personal details</a>
       </p>
 
     </div>
