--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -73,7 +73,8 @@
               {
                 href: personalName.changeLink,
                 text: personalName.action,
-                visuallyHiddenText: "Full name"
+                visuallyHiddenText: "Full name",
+                classes: "govuk-link--no-visited-state"
               }
             ]
           }
@@ -90,7 +91,8 @@
               {
                 href: dob.changeLink,
                 text: dob.action,
-                visuallyHiddenText: "date of birth"
+                visuallyHiddenText: "date of birth",
+                classes: "govuk-link--no-visited-state"
               }
             ]
           }
@@ -115,7 +117,8 @@
               {
                 href: personalAddress.changeLink,
                 text: personalAddress.action,
-                visuallyHiddenText: "personal address"
+                visuallyHiddenText: "personal address",
+                classes: "govuk-link--no-visited-state"
               }
             ]
           }
@@ -132,7 +135,8 @@
               {
                 href: personalTelephone.changeLink,
                 text: personalTelephone.action,
-                visuallyHiddenText: "personal phone numbers"
+                visuallyHiddenText: "personal phone numbers",
+                classes: "govuk-link--no-visited-state"
               }
             ]
           }
@@ -149,7 +153,8 @@
               {
                 href: personalEmail.changeLink,
                 text: personalEmail.action,
-                visuallyHiddenText: "personal email address"
+                visuallyHiddenText: "personal email address",
+                classes: "govuk-link--no-visited-state"
               }
             ]
           }
