update business details change links

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -81,7 +81,8 @@
           {
             href: businessName.changeLink,
             text: businessName.action,
-            visuallyHiddenText: "Business name"
+            visuallyHiddenText: "Business name",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
@@ -95,7 +96,8 @@
           {
             href: businessAddress.changeLink,
             text: businessAddress.action,
-            visuallyHiddenText: "Business address"
+            visuallyHiddenText: "Business address",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
@@ -109,7 +111,8 @@
           {
             href: businessTelephone.changeLink,
             text: businessTelephone.action,
-            visuallyHiddenText: "Business telephone numbers"
+            visuallyHiddenText: "Business telephone numbers",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
@@ -123,7 +126,8 @@
           {
             href: businessEmail.changeLink,
             text: businessEmail.action,
-            visuallyHiddenText: "Business email address"
+            visuallyHiddenText: "Business email address",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
@@ -142,7 +146,8 @@
             {
               href: vatNumber.changeLink,
               text: vatNumber.action,
-              visuallyHiddenText: "VAT registration number"
+              visuallyHiddenText: "VAT registration number",
+              classes: "govuk-link--no-visited-state"
             }
           ]
         } %}
@@ -265,7 +270,8 @@
           {
             href: businessLegalStatus.changeLink,
             text: businessLegalStatus.action,
-            visuallyHiddenText: "Business legal status"
+            visuallyHiddenText: "Business legal status",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
@@ -279,7 +285,8 @@
           {
             href: businessType.changeLink,
             text: businessType.action,
-            visuallyHiddenText: "Business type"
+            visuallyHiddenText: "Business type",
+            classes: "govuk-link--no-visited-state"
           }
         ]
       } %}
