update all other change links to use no-visited-state-class

--- a/src/views/business/business-address-check.njk
+++ b/src/views/business/business-address-check.njk
@@ -39,7 +39,8 @@
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "business address"
+                    visuallyHiddenText: "business address",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
