--- a/src/views/business/business-email-check.njk
+++ b/src/views/business/business-email-check.njk
@@ -34,7 +34,8 @@
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "business email"
+                    visuallyHiddenText: "business email",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
