--- a/src/views/business/business-name-check.njk
+++ b/src/views/business/business-name-check.njk
@@ -34,7 +34,8 @@
                   {
                     href: "/business-name-change",
                     text: "Change",
-                    visuallyHiddenText: "business name"
+                    visuallyHiddenText: "business name",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
