--- a/src/views/business/business-phone-numbers-check.njk
+++ b/src/views/business/business-phone-numbers-check.njk
@@ -46,7 +46,7 @@
             </p>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href={{changeLink}}>Change<span class="govuk-visually-hidden">business phone numbers</span></a>
+            <a class="govuk-link govuk-link--no-visited-state" href={{changeLink}}>Change<span class="govuk-visually-hidden">business phone numbers</span></a>
           </dd>
         </div>
       </dl>
