--- a/src/views/business/business-vat-registration-number-check.njk
+++ b/src/views/business/business-vat-registration-number-check.njk
@@ -34,7 +34,8 @@
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "vat registration number"
+                    visuallyHiddenText: "vat registration number",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
