--- a/src/views/personal/personal-address-check.njk
+++ b/src/views/personal/personal-address-check.njk
@@ -39,7 +39,8 @@
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "personal address"
+                    visuallyHiddenText: "personal address",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
