--- a/src/views/personal/personal-dob-check.njk
+++ b/src/views/personal/personal-dob-check.njk
@@ -34,7 +34,8 @@
                   {
                     href: changeLink,
                     text: "Change",
-                    visuallyHiddenText: "change date of birth"
+                    visuallyHiddenText: "change date of birth",
+                    classes: "govuk-link--no-visited-state"
                   }
                 ]
               }
