--- a/src/views/personal/personal-email-check.njk
+++ b/src/views/personal/personal-email-check.njk
@@ -34,7 +34,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "personal email"
+                      visuallyHiddenText: "personal email",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
