--- a/src/views/personal/personal-fix-check.njk
+++ b/src/views/personal/personal-fix-check.njk
@@ -36,7 +36,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "full name"
+                      visuallyHiddenText: "full name",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
@@ -60,7 +61,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "personal address"
+                      visuallyHiddenText: "personal address",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
@@ -100,7 +102,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "personal phone numbers"
+                      visuallyHiddenText: "personal phone numbers",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
@@ -119,7 +122,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "personal email"
+                      visuallyHiddenText: "personal email",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
@@ -137,7 +141,8 @@
                     {
                       href: changeLink,
                       text: "Change",
-                      visuallyHiddenText: "change date of birth"
+                      visuallyHiddenText: "change date of birth",
+                      classes: "govuk-link--no-visited-state"
                     }
                   ]
                 }
