--- a/src/views/personal/personal-name-check.njk
+++ b/src/views/personal/personal-name-check.njk
@@ -33,7 +33,8 @@
                 {
                   href: changeLink,
                   text: "Change",
-                  visuallyHiddenText: "full name"
+                  visuallyHiddenText: "full name",
+                  classes: "govuk-link--no-visited-state"
                 }
               ]
             }
