ensure all sign in/sign out/sign back in links have the correct styling

--- a/src/views/common/navigation/back-sign-out-link.njk
+++ b/src/views/common/navigation/back-sign-out-link.njk
@@ -11,7 +11,7 @@
 
     {% if auth.isAuthenticated %}
       <div  class="govuk-grid-column-one-third govuk-!-text-align-right">
-        <a href="/auth/sign-out" class="govuk-link">Sign out</a>
+        <a href="/auth/sign-out" class="govuk-link govuk-link--no-visited-state">Sign out</a>
       </div>
     {% endif %}
   </div>
