--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -3,7 +3,7 @@
 {% block beforeContent %}
   <div class="govuk-grid-row sub-header-container govuk-!-padding-top-3">
     <div class="govuk-grid-column-full govuk-!-text-align-right">
-      <a href="/auth/sign-out" class="govuk-link">Sign out</a>
+      <a href="/auth/sign-out" class="govuk-link govuk-link--no-visited-state">Sign out</a>
     </div>
   </div>
 {% endblock %}
