--- a/src/views/signed-out.njk
+++ b/src/views/signed-out.njk
@@ -5,9 +5,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p class="govuk-body">
-        {{ metaDescription }} <a href= {{ signInLink }} > {{ signInText }}</a>.
+        {{ metaDescription }} <a href= {{ signInLink }} class="govuk-link govuk-link--no-visited-state"> {{ signInText }}</a>.
       </p>
- 
     </div>
   </div>
 {% endblock %}
