add no-visited-state styling to 'Enter address manually' link

--- a/src/views/business/business-address-change.njk
+++ b/src/views/business/business-address-change.njk
@@ -45,7 +45,7 @@
             }
           }) }}
 
-          <p class="govuk-body"><a href="/business-address-enter" class="govuk-link">Enter address manually</a></p>
+          <p class="govuk-body"><a href="/business-address-enter" class="govuk-link govuk-link--no-visited-state">Enter address manually</a></p>
 
         </fieldset>
 
