--- a/src/views/personal/personal-address-select.njk
+++ b/src/views/personal/personal-address-select.njk
@@ -45,7 +45,7 @@
           }) }}
         </fieldset>
 
-        <p class="govuk-body"><a href="/account-address-enter" class="govuk-link">Enter address manually</a></p>
+        <p class="govuk-body"><a href="/account-address-enter" class="govuk-link govuk-link--no-visited-state">Enter address manually</a></p>
 
         {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
       </form>
