--- a/src/views/business/business-address-select.njk
+++ b/src/views/business/business-address-select.njk
@@ -48,7 +48,7 @@
           }) }}
         </fieldset>
 
-        <p class="govuk-body"><a href="/business-address-enter" class="govuk-link">Enter address manually</a></p>
+        <p class="govuk-body"><a href="/business-address-enter" class="govuk-link govuk-link--no-visited-state">Enter address manually</a></p>
 
         {{ govukButton({ text: "Continue", preventDoubleClick: true }) }}
       </form>
