--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -9,38 +9,49 @@
 {% endblock %}
 
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       {# Notification banner #}
       {% if notification %}
+        {% if notification.html %}
+          {% set successBannerHtml = notification.html %}
+        {% else %}
+          {% set successBannerHtml %}
+            <h3 class="govuk-notification-banner__heading">
+              {{ notification.text }}
+            </h3>
+          {% endset %}
+        {% endif %}
+
         {{ govukNotificationBanner({
           type: "success",
           titleText: notification.title,
-          html: notification.html or notification.text
+          html: successBannerHtml
         })}}
       {% endif %}
 
-    <span class="govuk-caption-l text-wrap-no-hyphen">{{userName}}</span>
+      <span class="govuk-caption-l text-wrap-no-hyphen">{{userName}}</span>
 
-    <h1 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
       View and update your personal details
     </h1>
 
-    {% set displayDOB %}
+      {% set displayDOB %}
       {% if dob.fullDateOfBirth === 'Not added' %}
-        <div><span class="govuk-hint display-inline">Not added</span></div>
+        <div>
+          <span class="govuk-hint display-inline">Not added</span></div>
       {% else %}
         <div>{{ dob.fullDateOfBirth }}</div>
       {% endif %}
-    {% endset %}
+      {% endset %}
 
-    {% set formattedAddress %}
+      {% set formattedAddress %}
       {% for addressLine in personalAddress.address %}
         <div>{{addressLine}}</div>
       {% endfor %}
-    {% endset %}
+      {% endset %}
 
-    {% set displayPersonalTelephone %}
+      {% set displayPersonalTelephone %}
       <div>
         Telephone:
         {% if personalTelephone.telephone === 'Not added' %}
@@ -57,9 +68,9 @@
           <span>{{ personalTelephone.mobile }}</span>
         {% endif %}
       </div>
-    {% endset %}
+      {% endset %}
 
-    {{ govukSummaryList({
+      {{ govukSummaryList({
       rows: [
         {
           key: {
@@ -162,6 +173,6 @@
       ]
     }) }}
 
+    </div>
   </div>
-</div>
 {% endblock %}
