--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -13,11 +13,19 @@
   <div class="govuk-grid-column-two-thirds">
       {# Notification banner #}
       {% if notification %}
-        {{ govukNotificationBanner({
-          type: "success",
-          titleText: notification.title,
-          html: notification.html or notification.text
-        })}}
+        {% if notification.html %}
+          {{ govukNotificationBanner({
+            type: "success",
+            titleText: notification.title,
+            html: notification.html
+          })}}
+        {% else %}
+          {{ govukNotificationBanner({
+            type: "success",
+            titleText: notification.title,
+            text: notification.text
+          })}}
+        {% endif %}
       {% endif %}
 
     <span class="govuk-caption-l text-wrap-no-hyphen">{{userName}}</span>
