--- a/src/views/business/business-fix-list.njk
+++ b/src/views/business/business-fix-list.njk
@@ -8,6 +8,7 @@
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 
 {% block beforeContent %}
+  {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
