--- a/src/views/personal/personal-fix-check.njk
+++ b/src/views/personal/personal-fix-check.njk
@@ -7,6 +7,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
 {% block beforeContent %}
+  {{ subHeader(userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
