--- a/src/views/personal/personal-fix.njk
+++ b/src/views/personal/personal-fix.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block beforeContent %}
+  {{ subHeader(userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
