--- a/src/views/personal/personal-fix.njk
+++ b/src/views/personal/personal-fix.njk
@@ -3,6 +3,7 @@
 {% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
   {{ subHeader(userName=userName) }}
