--- a/src/views/personal/personal-fix-list.njk
+++ b/src/views/personal/personal-fix-list.njk
@@ -6,8 +6,10 @@
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+{% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
+  {{ subHeader(userName=userName) }}
   {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
