--- a/src/views/personal/personal-fix-check.njk
+++ b/src/views/personal/personal-fix-check.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
+{% from "common/sub-header/macro.njk" import subHeader %}
 
 {% block beforeContent %}
   {{ subHeader(userName=userName) }}
