apply custom class to warning icon component

--- a/src/views/business/business-fix.njk
+++ b/src/views/business/business-fix.njk
@@ -21,7 +21,8 @@
 
     {{ govukWarningText({
       text: "Some of your details seem to be missing or incorrect. We need these details to contact you, or to verify your identity if you phone us.",
-      iconFallbackText: "Warning"
+      iconFallbackText: "Warning",
+      classes: "warning-icon-alignment"
     }) }}
 
     <p>{{updateText}}</p>
