update business fix check view to use changeBusinessName

--- a/src/views/business/business-fix-check.njk
+++ b/src/views/business/business-fix-check.njk
@@ -32,7 +32,7 @@
             {% if section === 'name' %}
               {% set rowItem = {
                 key: { text: "Business name" },
-                value: { text: businessName },
+                value: { text: changeBusinessName },
                 actions: {
                   items: [
                     {
