update business fix list presenter

--- a/src/views/business/business-fix-list.njk
+++ b/src/views/business/business-fix-list.njk
@@ -43,7 +43,7 @@
               {{ govukInput({
                 id: "business-name",
                 name: "businessName",
-                value: businessName,
+                value: changeBusinessName,
                 errorMessage: errors.businessName and {
                   text: errors.businessName.text
                 }
