--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -68,5 +68,5 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script type="module" nonce="{{ nonce }} src="{{ getAssetPath('application.js') }}"></script>
+  <script type="module" nonce="{{ nonce }}" src="{{ getAssetPath('application.js') }}"></script>
 {% endblock %}
